# company-fit-check

./: .gitignore  README.md  pyproject.toml  start_mlflow_ui.sh
.tmp/: llm-prompts-session-2cad03bd54414134b90b250409ba0067.txt  llm-prompts-session-c17a3fb813d346378ddf60e1bfcfe14c.txt  masked-cv-20260430-111626.txt  mlflow-prompt-buffer-12cadf905dd740b9846b57eac262b502.txt  mlflow-prompt-buffer-15c2d4d29a434402a94d554ecc70cf95.txt  mlflow-prompt-buffer-1a741ffc55ac420db61b9975cc67a7f3.txt  mlflow-prompt-buffer-280d94c7f7fc49b39d1586fc6ae1cbd1.txt  simplified-cv-20260429-220545.txt  simplified-cv-20260430-111215.txt  simplified-cv-20260430-111642.txt  simplified-cv-20260430-130619.txt  simplified-cv-20260430-131644.txt  simplified-cv-20260430-132901.txt
eval_data/deterministic_cases/: clarification_loop_is_bounded.json  clarification_rephrase_replaces_blocked_message.json  company_search_blocked_until_prereqs_valid.json  csv_schema_is_valid.json  generic_llm_failure_is_sanitized.json  guardrail_4xx_fails_with_cv_cleanup.json  guardrail_4xx_fails_with_restart.json  guardrail_4xx_rephrase_stops_workflow.json  llm_uses_masked_cv_not_raw_cv.json  masked_cv_has_no_contact_details.json  score_shape_is_valid_for_all_companies.json  workflow_stops_on_masking_failure.json
eval_data/mutation_tests/: buckets.json
eval_data/non_deterministic_regression/: cardiologist_relocation_hospital_network.json  civil_engineer_international_infrastructure_projects.json  devops_engineer_remote_latam_companies.json  (+8 more)
src/: config.py  logging_utils.py
tests/: conftest.py  test_llm_client.py
(+117 files in other folders)
