[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-fit-check"
version = "0.1.0"
description = "Minimal LangGraph scaffold for matching users with companies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-storage-blob",
  "chainlit",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "mlflow",
  "presidio-analyzer",
  "presidio-anonymizer",
  "pypdf",
  "pydantic",
  "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/company_fit_check"]
