[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-fit-check"
version = "0.1.0"
description = "Minimal LangGraph scaffold for matching users with companies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "azure-storage-blob",
  "chainlit",
  "langchain-core",
  "langchain-openai",
  "langgraph",
  "mlflow",
  "presidio-analyzer",
  "presidio-anonymizer",
  "pytest",
  "pypdf",
  "pydantic",
  "python-dotenv",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
